tests/other-tests/tests/check/fail/invalid_macro_output.err.txt
error[E0277]: cannot add `&str` to `{integer}`
 --> /tests/check/fail/invalid_macro_output.rs:3:19
  |
3 |         let _ = 2 + "2";
  |                   ^ no implementation for `{integer} + &str`
...
8 |     produce_invalid_code!();
  |     ----------------------- in this macro invocation
  |
  = help: the trait `Add<&str>` is not implemented for `{integer}`
  = help: the following other types implement trait `Add<Rhs>`:
            `&'a f128` implements `Add<f128>`
            `&'a f16` implements `Add<f16>`
            `&'a f32` implements `Add<f32>`
            `&'a f64` implements `Add<f64>`
            `&'a i128` implements `Add<i128>`
            `&'a i16` implements `Add<i16>`
            `&'a i32` implements `Add<i32>`
            `&'a i64` implements `Add<i64>`
          and 56 others
  = note: this error originates in the macro `produce_invalid_code` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
error: could not compile `<CRATE>` (bin "<BIN>") due to 1 previous error
